Add the text : Vagabondages hygiéniques

--- a/main.lyx
+++ b/main.lyx
@@ -4436,5 +4436,388 @@ es sur la plage (lisant et écrivant) et nous baignâmes dans la chaude eau
  l'eau et dans les airs -- un joli spectacle au coucher du soleil.
 \end_layout
 
+\begin_layout Section*
+Vagabondages hygiéniques
+\end_layout
+
+\begin_layout Standard
+Se laver est une préoccupation majeure de l'homme occidental moderne.
+ Davantage même ! Il semble obnubilé par l'hygiène à toutes les sauces.
+ Convenons qu'un minimum est nécessaire.
+ Mais qui pourrait me dire quel est ce minimum ? Chacun doit avoir sa limite.
+\end_layout
+
+\begin_layout Standard
+Durant nos deux périples, nous avons du revoir à la baisse nos propres limites.
+ Pour tout vous dire, cela ne nous a pas traumatisé ; nous devions avoir
+ quelques prédispositions à la crasse...
+\end_layout
+
+\begin_layout Standard
+Quelques soient ces limites, comment font deux baroudeurs de pleine nature,
+ sans eau à volonté sortant d'un robinet, pour se laver ? Selon les lieux
+ et les météos, nos manières ont été bien différentes.
+ Du bain complètement nu dans l'eau tiède d'une rivière, au décrassage complet
+ dans un ruisseau glacé, en passant par le simple débarbouillage de goule
+ ou de pieds, nous avons testé et approuvé maintes techniques.
+\end_layout
+
+\begin_layout Standard
+\begin_inset VSpace medskip
+\end_inset
+
+
+\end_layout
+
+\begin_layout Standard
+En kayak, sur la Loire, nous passions nos journées les pieds dans l'eau.
+ Alors, quand venait le soir, nous ne nous sentions pas crasseux pour un
+ sou.
+\end_layout
+
+\begin_layout Standard
+À son commencement, le fleuve était bien agité ; il nous ballotait et nous
+ trempait jusqu'aux os.
+ Le soir était alors synonyme de séchage plus que de lavage.
+\end_layout
+
+\begin_layout Standard
+Par la suite, lorsque la navigation est devenue calme, le soleil ami et
+ l'eau tiède, le bain du soir était un délice.
+ Si l'endroit du bivouac s'y prêtait (hors des villes, sur des plages...),
+ je 
+\begin_inset Quotes fld
+\end_inset
+
+plouffais
+\begin_inset Quotes frd
+\end_inset
+
+ et barbotais dans l'eau, tandis que Mathieu y plongeait et y nageait.
+ Notre toilette était alors complète, avec comme seuls accessoires : savon
+ de Marseille et gant.
+\end_layout
+
+\begin_layout Standard
+Bien sûr, nous avons du passer outre quelques aprioris sur la propreté de
+ l'eau.
+ Il est possible, en effet, qu'elle était polluée de quelques éléments peu
+ ragoutants.
+ Mais de prime abord, rien de repoussant.
+ Si le mal existait, il était invisible.
+\end_layout
+
+\begin_layout Standard
+C'est donc simple.
+ Pour notre voyage en kayak, l'hygiène a été facile dès que la Loire l'a
+ été, et aucune douche chaude ne nous a fait fantasmer.
+\end_layout
+
+\begin_layout Standard
+\begin_inset VSpace medskip
+\end_inset
+
+
+\end_layout
+
+\begin_layout Standard
+Lors de notre 
+\begin_inset Quotes fld
+\end_inset
+
+grande marche
+\begin_inset Quotes frd
+\end_inset
+
+, les conditions ont été moins favorables à une bonne hygiène.
+ Primo, nous ne jouissions plus d'une source d'eau 
+\begin_inset Quotes fld
+\end_inset
+
+à volonté
+\begin_inset Quotes frd
+\end_inset
+
+.
+ Secondo, la météo ne fut pas aussi clémente.
+\end_layout
+
+\begin_layout Standard
+Après un joyeux plongeon dans nos mémoires et un savant décompte, nous pouvons
+ déclarer : 20
+\begin_inset space ~
+\end_inset
+
+lavages en 114
+\begin_inset space ~
+\end_inset
+
+jours, soit un tous les 6
+\begin_inset space ~
+\end_inset
+
+jours.
+ Au maximum, le temps entre deux lavages a atteint 13
+\begin_inset space ~
+\end_inset
+
+jours ! Pensez-vous que c'est trop peu ? Que nous avons manqué effroyablement
+ d'hygiène ? Peut-être...
+ Pourtant, nous ne nous sommes jamais sentis en 
+\begin_inset Quotes fld
+\end_inset
+
+précarité hygiénique
+\begin_inset Quotes frd
+\end_inset
+
+.
+ Peut-être, aussi, que nos yeux étaient occupés à autre chose qu'à reluquer
+ la crasse de nos corps...
+\end_layout
+
+\begin_layout Standard
+Quoi qu'il en soit, quels furent, durant les quatre mois de ce second périple,
+ les endroits et les manières de nos lavages ?
+\end_layout
+
+\begin_layout Standard
+Il y eut quelques grandes rivières sillonnant le territoire
+\begin_inset Foot
+status collapsed
+
+\begin_layout Plain Layout
+Essentiellement durant la 1
+\begin_inset script superscript
+
+\begin_layout Plain Layout
+ère
+\end_layout
+
+\end_inset
+
+ moitié : de Loire\SpecialChar \nobreakdash-
+Atlantique jusqu'en Creuse.
+\end_layout
+
+\end_inset
+
+ : la Loire, la Vienne, l'Indre et la Creuse.
+ Au gré de leurs lits longs, larges et profonds, nous pouvions y nager et
+ y délier nos corps, tandis que leurs flots et leurs vaguelettes nous faisaient
+ rêvasser.
+\end_layout
+
+\begin_layout Standard
+Nous ont également accueillis : des ruisseaux sans nom et quelques sources
+ jaillissant de terre
+\begin_inset Foot
+status collapsed
+
+\begin_layout Plain Layout
+Principalement durant la 2
+\begin_inset script superscript
+
+\begin_layout Plain Layout
+e
+\end_layout
+
+\end_inset
+
+ moitié : de Creuse à Nice.
+\end_layout
+
+\end_inset
+
+.
+ Souvent éloignés de toute présence humaine, c'est sans complexe que --
+ nus comme des vers -- nous y avons fait nos plus grosses toilettes.
+\end_layout
+
+\begin_layout Standard
+Il y eut aussi -- surtout pour le bien-être du corps -- un grand lac (celui
+ de Vassivière) et une jolie mer (la Méditerranée).
+\end_layout
+
+\begin_layout Standard
+Pour finir, à cinq reprises, nous sommes 
+\begin_inset Quotes fld
+\end_inset
+
+passés à la douche
+\begin_inset Quotes frd
+\end_inset
+
+.
+ Accueillis chez des amis, des douches chaudes et formelles nous ont été
+ offertes.
+ Rien de bien palpitant, cependant, à voir sortir l'eau d'un robinet.
+\end_layout
+
+\begin_layout Standard
+Mais n'oublions pas les fois où la toilette fut sommaire
+\begin_inset Foot
+status collapsed
+
+\begin_layout Plain Layout
+Ces 
+\begin_inset Quotes fld
+\end_inset
+
+fois
+\begin_inset Quotes frd
+\end_inset
+
+ là se sont généralisées dans le Sud, qui avait moins de rivières, de ruisseaux,
+ de lacs...
+ à nous offrir.
+\end_layout
+
+\end_inset
+
+.
+ Grâce à notre outre d'eau de six litres, nous pouvions laver nos goules,
+ nos pieds et nos dents bien plus régulièrement.
+\end_layout
+
+\begin_layout Standard
+Un fait 
+\begin_inset Quotes fld
+\end_inset
+
+amusant
+\begin_inset Quotes frd
+\end_inset
+
+ de ce voyage : plus l'eau tombait du ciel, plus notre hygiène était mauvaise
+\begin_inset Foot
+status collapsed
+
+\begin_layout Plain Layout
+Durant presque toute la Creuse, ce fut le cas.
+\end_layout
+
+\end_inset
+
+.
+ Aucune envie, en effet, d'ajouter de l'eau froide à la froide humidité
+ !
+\end_layout
+
+\begin_layout Standard
+\begin_inset VSpace medskip
+\end_inset
+
+
+\end_layout
+
+\begin_layout Standard
+Ce voyage, nous l'avons vécu au plus proche de dame Nature.
+ Nous y avons eu une hygiène nécessaire et suffisante à une bonne santé
+ physique et morale.
+ Notre manque relatif de propreté ne nous a pas gêné, excepté lors de nos
+ retours en société.
+ Parfois, pendant de longs moments, l'eau était notre amie intime ; et nous
+ aimions jouer ensemble...
+ À d'autres, elle et nous étions brouillés ; de chagrin, nous nous soûlions
+ alors de poussière, qui recouvrait nos corps.
+ Mais les rabibochages en étaient que plus plaisants, plus intenses, plus
+ singuliers.
+\end_layout
+
+\begin_layout Standard
+Pour finir, illustrons cette rétrospective hygiénique par quelques moments
+ cocasses.
+\end_layout
+
+\begin_layout Subsection*
+Lavage nudiste interrompu par deux randonneurs
+\end_layout
+
+\begin_layout Standard
+
+\emph on
+Début mai 2011 -- Marie
+\end_layout
+
+\begin_layout Standard
+Peu après Orléans, le kayak allait bon train.
+ Mais à l'heure du midi, tandis que nous mettions pieds à terre pour le
+ tirer dans quelques eaux peu profondes et bouillonnantes, germa en nous
+ l'idée de nous laver : nus, ici et maintenant.
+ Encore novices dans l'art du naturisme, c'est un peu empotés que nous nous
+ toilettâmes le cul et le reste, dans l'eau un peu froide.
+\end_layout
+
+\begin_layout Standard
+La Loire, à cet endroit, était large et ouverte.
+ Avec seulement la peau sur les os, un pain de savon dans une main et un
+ gant de toilette -- rouge écarlate -- enfourché sur l'autre, nous ne nous
+ sentions pas du tout à l'aise et avions les yeux qui furetaient anxieusement.
+ Ces yeux fureteurs furent utiles, car un couple de randonneurs quinquagénaires
+ s'arrêta en bord de rive, pour nous mater ostensiblement.
+ Vicelards ou amis du naturel ?
+\end_layout
+
+\begin_layout Standard
+M'accroupissant précipitamment derrière notre long kayak, je lançai à Mathieu
+ : 
+\begin_inset Quotes fld
+\end_inset
+
+Y'a des gens !
+\begin_inset Quotes frd
+\end_inset
+
+.
+ Ni une ni deux, il s'accroupit avec autant de célérité, cachant son mètre
+ quasi quatre-vingt dix dans...
+ 30
+\begin_inset space ~
+\end_inset
+
+centimètres d'eau.
+ Après quelques secondes ainsi, prenant pleinement conscience de nos postures
+ ridicules, nous nous détendîmes, les saluâmes et nous remîmes à nos affaires.
+\end_layout
+
+\begin_layout Subsection*
+Toilette champêtre
+\end_layout
+
+\begin_layout Standard
+
+\emph on
+03/08/2011 -- Marie
+\end_layout
+
+\begin_layout Standard
+Nous voilà en plein pays de puys auvergnats, plantés au bord d'un ruisseau
+ sans nom, petit 
+\begin_inset Quotes fld
+\end_inset
+
+pipi de chat
+\begin_inset Quotes frd
+\end_inset
+
+.
+ Nous ne nous sommes pas lavés, avec savon, depuis belle lurette.
+ Mais, ce soir, nous jugeons nécessaire de réaliser cette besogne.
+\end_layout
+
+\begin_layout Standard
+Alors, profitant des derniers rayons du soleil, nous allons -- tout nus
+ -- savonner nos derrières et nos têtes.
+ L'eau n'est pas thermale ; 
+\emph on
+aglagla
+\emph default
+ qu'elle est froide ; mais qu'elle fait du bien ! Et puis, bien aligné à
+ un mètre seulement, notre public se rince l’œil : une belle brochette de
+ vaches ; et un taureau auvergnat qui n'a pas à rougir, lui, de ses attributs.
+ L'eau froide, vous savez...
+\end_layout
+
 \end_body
 \end_document
