Review of paragraphs separators (particularly, add some "cul-de-lampe")

--- a/main.lyx
+++ b/main.lyx
@@ -93,14 +93,9 @@ Et sur le quai d'une gare, une maman qui vous embrasse de tout son soûl.
 \end_inset
 
 Voilà comment débute un long voyage.
-\end_layout
-
-\begin_layout Standard
-\noindent
-\align center
-
 \shape smallcaps
-\begin_inset VSpace medskip
+
+\begin_inset VSpace bigskip
 \end_inset
 
 
@@ -634,8 +629,8 @@ Nazaire.
 kilomètres, bob sur la tête et manches retroussées.
  Bon vent et bonne vague !
 \shape smallcaps
- 
-\begin_inset VSpace medskip
+
+\begin_inset VSpace bigskip
 \end_inset
 
 
@@ -672,11 +667,9 @@ Deux semaines déjà.
  Et une Loire tristement basse, comme en un sec été.
  Ça commence mal, pour nous qui nous attendions à une Loire plus haute,
  plus fleuve.
-\shape smallcaps
+\end_layout
 
-\begin_inset VSpace medskip
-\end_inset
-
+\begin_layout Cul-de-lampe
 
 \end_layout
 
@@ -789,11 +782,9 @@ Louizanne
  Cette dernière précision est fondamentale ; elle est la raison des plus
  grands de nos stress et préoccupations.
  La voilà faite, nous pouvons alors poursuivre.
-\shape smallcaps
+\end_layout
 
-\begin_inset VSpace medskip
-\end_inset
-
+\begin_layout Cul-de-lampe
 
 \end_layout
 
@@ -993,7 +984,7 @@ e que, oui, c'était aussi cette Loire là que nous étions venu chercher.
  et autres merdes humaines.
 \shape smallcaps
 
-\begin_inset VSpace medskip
+\begin_inset VSpace bigskip
 \end_inset
 
 
@@ -1157,7 +1148,7 @@ Aujourd'hui, en ce dimanche premier mai, le voilà parti de bonne heure,
 kilomètres : nous pouvons tout nous permettre.
 \shape smallcaps
 
-\begin_inset VSpace medskip
+\begin_inset VSpace bigskip
 \end_inset
 
 
@@ -1221,7 +1212,7 @@ Centrale nucléaire de Belleville.
  Puis dimanche, Orléans la pucelle pointera les faubourgs de son nez.
 \shape smallcaps
 
-\begin_inset VSpace medskip
+\begin_inset VSpace bigskip
 \end_inset
 
 
@@ -1328,7 +1319,7 @@ semaines de kayak) nous a mis à rude épreuve : sportivement, mentalement
  Nous l'avons passée ; non sans mal !
 \shape smallcaps
 
-\begin_inset VSpace medskip
+\begin_inset VSpace bigskip
 \end_inset
 
 
@@ -1389,7 +1380,7 @@ Nous étions cocasses à mugir et à piétiner dans cinq centimètres d'eau,
  Et cette fois-ci, pas de hic.
 \shape smallcaps
 
-\begin_inset VSpace medskip
+\begin_inset VSpace bigskip
 \end_inset
 
 
@@ -1709,10 +1700,7 @@ coloca-Terre
  sa vase, ses navires, sa force !
 \end_layout
 
-\begin_layout Standard
-\begin_inset VSpace medskip
-\end_inset
-
+\begin_layout Cul-de-lampe
 
 \end_layout
 
@@ -1844,10 +1832,7 @@ arrivée triomphale
 \end_inset
 
  dans la vase de l'estuaire.
-\end_layout
-
-\begin_layout Standard
-\begin_inset VSpace medskip
+\begin_inset VSpace bigskip
 \end_inset
 
 
@@ -2365,10 +2350,7 @@ Le sac de Marie (avec vivres + eau) = 8 kilos.
 Et maintenant, en route !
 \end_layout
 
-\begin_layout Standard
-\begin_inset VSpace medskip
-\end_inset
-
+\begin_layout Cul-de-lampe
 
 \end_layout
 
@@ -2478,10 +2460,7 @@ Finissant de suivre l'est et les cœurs de tournesol, nous avons mis cap
  directions.
 \end_layout
 
-\begin_layout Standard
-\begin_inset VSpace medskip
-\end_inset
-
+\begin_layout Cul-de-lampe
 
 \end_layout
 
@@ -2977,10 +2956,7 @@ Ronron...
 \end_inset
 
 
-\end_layout
-
-\begin_layout Standard
-\begin_inset VSpace medskip
+\begin_inset VSpace bigskip
 \end_inset
 
 
@@ -3060,10 +3036,7 @@ Ronron...
 \end_inset
 
 
-\end_layout
-
-\begin_layout Standard
-\begin_inset VSpace medskip
+\begin_inset VSpace bigskip
 \end_inset
 
 
@@ -3314,10 +3287,7 @@ Ce jugement devint rapidement le nôtre.
  tous les goûts s'épanouissent.
 \end_layout
 
-\begin_layout Standard
-\begin_inset VSpace medskip
-\end_inset
-
+\begin_layout Cul-de-lampe
 
 \end_layout
 
@@ -3362,10 +3332,7 @@ Je crois que mon tableau est clair : ce petit homme nous a fait rire et
  nuit.
  Le bougre eu tôt fait de reprendre sa route zigzag et de se trouver une
  belle place dans nos têtes.
-\end_layout
-
-\begin_layout Standard
-\begin_inset VSpace medskip
+\begin_inset VSpace bigskip
 \end_inset
 
 
@@ -3392,10 +3359,7 @@ Mais le bon Francis, son souvenir et sa moustache eurent le bon goût de
  C'était décidé, nos pas iraient jusqu'à Francis ; ils iraient à Nice !
 \end_layout
 
-\begin_layout Standard
-\begin_inset VSpace medskip
-\end_inset
-
+\begin_layout Cul-de-lampe
 
 \end_layout
 
@@ -3786,10 +3750,7 @@ clic-clac
  Rien de bon, donc, à vous proposer.
 \end_layout
 
-\begin_layout Standard
-\begin_inset VSpace medskip
-\end_inset
-
+\begin_layout Cul-de-lampe
 
 \end_layout
 
@@ -3869,10 +3830,7 @@ Laissons maintenant cette nature, ses tons et ses couleurs, et braquons
  Le beau et l'affreux se subliment.
 \end_layout
 
-\begin_layout Standard
-\begin_inset VSpace medskip
-\end_inset
-
+\begin_layout Cul-de-lampe
 
 \end_layout
 
@@ -3985,10 +3943,7 @@ t de dépoussiérer (le PNR de Millevaches l'entretient, avec nos contributions
  On dit, d'ailleurs, que les jeunes éleveurs de brebis y seraient les bienvenus...
 \end_layout
 
-\begin_layout Standard
-\begin_inset VSpace medskip
-\end_inset
-
+\begin_layout Cul-de-lampe
 
 \end_layout
 
@@ -4464,10 +4419,7 @@ Quelques soient ces limites, comment font deux baroudeurs de pleine nature,
  Du bain complètement nu dans l'eau tiède d'une rivière, au décrassage complet
  dans un ruisseau glacé, en passant par le simple débarbouillage de goule
  ou de pieds, nous avons testé et approuvé maintes techniques.
-\end_layout
-
-\begin_layout Standard
-\begin_inset VSpace medskip
+\begin_inset VSpace bigskip
 \end_inset
 
 
@@ -4483,10 +4435,7 @@ En kayak, sur la Loire, nous passions nos journées les pieds dans l'eau.
 À son commencement, le fleuve était bien agité ; il nous ballotait et nous
  trempait jusqu'aux os.
  Le soir était alors synonyme de séchage plus que de lavage.
-\end_layout
-
-\begin_layout Standard
-Par la suite, lorsque la navigation est devenue calme, le soleil ami et
+ Par la suite, lorsque la navigation est devenue calme, le soleil ami et
  l'eau tiède, le bain du soir était un délice.
  Si l'endroit du bivouac s'y prêtait (hors des villes, sur des plages...),
  je 
@@ -4500,11 +4449,8 @@ plouffais
  et barbotais dans l'eau, tandis que Mathieu y plongeait et y nageait.
  Notre toilette était alors complète, avec comme seuls accessoires : savon
  de Marseille et gant.
-\end_layout
-
-\begin_layout Standard
-Bien sûr, nous avons du passer outre quelques aprioris sur la propreté de
- l'eau.
+ Bien sûr, nous avons du passer outre quelques aprioris sur la propreté
+ de l'eau.
  Il est possible, en effet, qu'elle était polluée de quelques éléments peu
  ragoutants.
  Mais de prime abord, rien de repoussant.
@@ -4515,10 +4461,7 @@ Bien sûr, nous avons du passer outre quelques aprioris sur la propreté de
 C'est donc simple.
  Pour notre voyage en kayak, l'hygiène a été facile dès que la Loire l'a
  été, et aucune douche chaude ne nous a fait fantasmer.
-\end_layout
-
-\begin_layout Standard
-\begin_inset VSpace medskip
+\begin_inset VSpace bigskip
 \end_inset
 
 
@@ -4578,10 +4521,7 @@ précarité hygiénique
 .
  Peut-être, aussi, que nos yeux étaient occupés à autre chose qu'à reluquer
  la crasse de nos corps...
-\end_layout
-
-\begin_layout Standard
-Quoi qu'il en soit, quels furent, durant les quatre mois de ce second périple,
+ Quoi qu'il en soit, quels furent, durant les quatre mois de ce second périple,
  les endroits et les manières de nos lavages ?
 \end_layout
 
@@ -4606,7 +4546,7 @@ Atlantique jusqu'en Creuse.
 
 \end_inset
 
- : la Loire, la Vienne, l'Indre et la Creuse.
+ : la Loire, la Vienne, l'Indre, la Creuse et le Tarn.
  Au gré de leurs lits longs, larges et profonds, nous pouvions y nager et
  y délier nos corps, tandis que leurs flots et leurs vaguelettes nous faisaient
  rêvasser.
@@ -4664,16 +4604,8 @@ Mais n'oublions pas les fois où la toilette fut sommaire
 status collapsed
 
 \begin_layout Plain Layout
-Ces 
-\begin_inset Quotes fld
-\end_inset
-
-fois
-\begin_inset Quotes frd
-\end_inset
-
- là se sont généralisées dans le Sud, qui avait moins de rivières, de ruisseaux,
- de lacs...
+Ces fois là se sont généralisées dans le Sud, qui avait moins de rivières,
+ de ruisseaux, de lacs...
  à nous offrir.
 \end_layout
 
@@ -4706,10 +4638,7 @@ Durant presque toute la Creuse, ce fut le cas.
 .
  Aucune envie, en effet, d'ajouter de l'eau froide à la froide humidité
  !
-\end_layout
-
-\begin_layout Standard
-\begin_inset VSpace medskip
+\begin_inset VSpace bigskip
 \end_inset
 
 
