Add the text : Trois arrières pays

--- a/main.lyx
+++ b/main.lyx
@@ -4396,6 +4396,257 @@ es sur la plage (lisant et écrivant) et nous baignâmes dans la chaude eau
 \end_layout
 
 \begin_layout Section*
+Trois arrières-pays
+\end_layout
+
+\begin_layout Standard
+Alpilles, Lubéron, Verdon.
+ Trois massifs montagneux -- parcs naturels régionaux -- qui seront nos
+ dernières difficultés du voyage ; de sacrément belles difficultés ! Nous
+ les parcourrons le temps d'un beau mois de septembre.
+\end_layout
+
+\begin_layout Standard
+Mais, avant de nous y atteler, il faut sortir de Camargue.
+ L'affaire n'est pas aisée, car quelques longs canaux facétieux aux portes
+ d'Arles et un maudit milliardaire -- propriétaire zélé -- compliquent notre
+ avancée, nous jetant sous les pieds huit gros kilomètres en rab.
+ Nous marchons, à cause d'eux, sans conviction sur une départementale trop
+ empruntée.
+ Mais les reliefs, au loin, attisent notre volonté et gonflent nos forces
+ pour y parvenir.
+ Un seul mot d'ordre : retrouver au plus vite les sensations de grandiose
+ que seuls les paysages montagneux nous ont offertes.
+\begin_inset VSpace bigskip
+\end_inset
+
+
+\end_layout
+
+\begin_layout Standard
+Le mercredi
+\begin_inset space ~
+\end_inset
+
+7, après une nuit passée aux portes d'une chapelle cerclée d'oliviers, le
+ petit massif des Alpilles nous engouffre et nous libère.
+ Ce massif -- plissements lointains des Alpes, fait de roches calcaires
+ -- est peu élevé.
+ Il est entouré de larges plaines, nous laissant le loisir d'observer :
+ au nord, les fameux pont d'Avignon et mont Ventoux ; au sud, une côte méditerra
+néenne ravagée par l'industrie et devancée par la réserve naturelle des
+ Coussouls de Crau ; et à l'est, des montagnes et des montagnes encore,
+ se perdant dans la brume.
+ Ici, la végétation, odorante et vivifiante, est un méli-mélo de montagne
+ et de méditerranée, de pins et de buissons rampants.
+ D'ouest en est, nous gambadons, alors, sur des montées délicieusement terreuses
+ et caillouteuses, dans une nature belle et poétique.
+\end_layout
+
+\begin_layout Standard
+Le soir même, nous sommes accueillis par l'espace naturel sensible de la
+ Caume, abrités du vent par des pins, mais piqués aux fesses par un tapis
+ de jeunes houx.
+ Et le lendemain, de cette Caume à un petit aérodrome quelques kilomètres
+ après, nous jouons aux équilibristes sur une crête magnifique et sportive,
+ luttant contre une tramontane décoiffante.
+ Cela ravive nos réflexes et envies de grimpeurs.
+ La descente se fait de glissades et de bougonnements, au travers d'une
+ très dense garrigue, sous le sifflement de deux planeurs virevoltant dans
+ le souffle des airs.
+ Nous terminons cette pleine journée, assouvis de paysages, dans le coin
+ tranquille d'un cimetière.
+ Derrière le clocher sombre d'une petite église, l'horizon orangé s'aplatit
+ et s'endort.
+\begin_inset VSpace bigskip
+\end_inset
+
+
+\end_layout
+
+\begin_layout Standard
+Après une dernière journée, d'une marche tranquille passée en rêverie, nous
+ quittons les Alpilles.
+ Et déjà, le Lubéron pointe le bout de son nez.
+ Mais, malgré l'énergie de petits-déjeuners gargantuesques (faits de muesli,
+ fromage blanc, charcuterie, fruits, chocolat...), la marche a bien du mal
+ à nous entrainer.
+ La lecture, l'écriture et la sieste semblent, au contraire, plus attrayantes.
+ Pourtant, il nous faut avancer : Nice est encore loin ! Un peu de courage
+ pour démarrer, puis le corps -- mécaniquement -- avance, grimpe, crapahute.
+\end_layout
+
+\begin_layout Standard
+Les deux premiers jours (10
+\begin_inset space ~
+\end_inset
+
+et
+\begin_inset space ~
+\end_inset
+
+11
+\begin_inset space ~
+\end_inset
+
+septembre), les hauteurs du Lubéron nous imposent le piétinement ; les garces
+ ! Leurs chemins, dans la garrigue, sont étroits, caillouteux, poussiéreux,
+ abrupts et souvent dénués d'ombre.
+ Les descentes succèdent aux montées, sans arrêt.
+ Nous évoluons sur une suite de mamelons, aux branches griffantes et à la
+ vue peu ouverte.
+ Le second jour, c'est assoiffés et affamés (les dernières gouttes d'eau
+ ingurgitées provenaient d'un concombre) que nous arrivons à Lourmarin,
+ un joli village bourgeois de l'arrière-pays.
+ 
+\end_layout
+
+\begin_layout Standard
+Ce début de Lubéron, qui promettait pourtant d'être fort plaisant, nous
+ laisse un goût amer.
+ Nous décidons, alors, de rester en contrebas de ces montagnes, profitant
+ ainsi de charmants petits villages, vidés de touristes en cette saison.
+ Voilà ce que sera, désormais, notre pain quotidien luberonnais : des chemins
+ bordés de murets en pierre, des monts qui nous narguent, du raison bien
+ mûr, de grands champs d'oliviers, des dédales de ruelles.
+ Cette marche tranquille donne dans le simple et le poétique, et nous comble
+ de bonheur.
+ Nous n'avons pas cédé à l'orgueil des hauteurs.
+\begin_inset VSpace bigskip
+\end_inset
+
+
+\end_layout
+
+\begin_layout Standard
+Le jeudi
+\begin_inset space ~
+\end_inset
+
+15, la ville de Manosque, sa large zone commerciale et ses routes bondées
+ de voitures marquent la fin de ce second massif.
+ Mais déjà, les montagnes visibles au loin (les Préalpes et le Verdon) nous
+ attirent inexorablement et excitent la rêverie des montagnards novices
+ que nous sommes.
+ La dernière ligne droite commence ; il ne faut pas faillir.
+ Le Verdon -- encensé par tant de nos rencontres de voyage -- nous attend
+ ! Les montées et les descentes recommencent, balaises et sportives.
+ Et la promesse renouvelée de paysages grandioses, telle une grosse carotte,
+ nous fait avancer comme deux ânes.
+\end_layout
+
+\begin_layout Standard
+Après deux jours passés en insolations et en essoufflements, entre poussière
+ et pierraille, petites villes touristiques et chasseurs, le plateau de
+ Valensole nous ouvre ses chemins, ses chênaies aux cœurs d'abeilles, ses
+ vergers de pommes sucrées, ses lavandins fraîchement coupés.
+ Pourtant, comme le soleil, le beau temps décline ; et un puissant orage
+ gronde au loin.
+\end_layout
+
+\begin_layout Standard
+Notre journée s'arrête au-dessus du lac de Sainte\SpecialChar \nobreakdash-
+Croix, au bord de quelques
+ ravins de terre ocre, alors qu'en haut, de nombreux éclairs claquent dans
+ un silence profond.
+ Nous nous éveillons tôt, au son des craquements voisins et d'une pluie
+ si battante qu'elle passe au travers de notre petite tente.
+ Tout proche, les pierres roulent sur les pentes abruptes.
+ Tout proche, le sol tremble à chaque flash lumineux dans les airs.
+ Pendant une heure, nous patientons avec calme, malgré quelques craintes,
+ sous cet orage impressionnant.
+ Puis il s'arrête ; et nous nous préparons, alors, au rythme des averses.
+\end_layout
+
+\begin_layout Standard
+C'est au rythme des averses, aussi, que nous marchons aujourd'hui -- dimanche
+ 18
+\begin_inset space ~
+\end_inset
+
+septembre -- nous engouffrant toujours plus dans ce qui est -- peut-être
+ -- l'un des plus beaux territoire français.
+ D'abord, une descente : à travers une forêt de pins ; les godillots collés
+ à une boue rouge ; les yeux rivés sur quelques troncs calcinés et explosés,
+ ou sur de jolies ravines.
+ Spectacle du ciel et de la terre.
+ Puis, un repos -- léger mais salutaire -- entouré des piaillements touristiques
+ de la jolie Moustiers\SpecialChar \nobreakdash-
+Sainte\SpecialChar \nobreakdash-
+Marie.
+ Enfin, une grimpe -- belle et sportive -- de la bourgade jusqu'aux hauteurs
+ de rocs et de pierres.
+ 
+\end_layout
+
+\begin_layout Standard
+Nous surplombons alors ce petit monde : l'immense lac, le vaste plateau
+ et des moyennes montagnes, partout.
+ Le Superbe est tout entier ici.
+ Il nous explose à la tête, au rythme de notre ascension, au rythme de nos
+ enjambées, au rythme des expirations de nos souffles courts.
+ Et, tout en haut, nos yeux grands ouverts l'embrassent à 360
+\begin_inset space ~
+\end_inset
+
+degrés.
+ Nous descendons, un peu sonnés.
+ Les jours raccourcissent et les températures dégringolent.
+ Ce soir-là -- dans une prairie crottée par les moutons, entourée par les
+ pins, ensemencée par les pierre, bucolique -- nous nous couchons tôt, calmes,
+ ravis et au frais.
+\end_layout
+
+\begin_layout Standard
+Le temps s'accélère.
+\end_layout
+
+\begin_layout Standard
+Le joyau du Verdon est enfin à nos pieds : ses gorges.
+ Mais le sentier 
+\begin_inset Quotes fld
+\end_inset
+
+Blanc\SpecialChar \nobreakdash-
+Martel
+\begin_inset Quotes frd
+\end_inset
+
+, qui les parcourt depuis tant d'années, est en cours de rénovation et de
+ sécurisation.
+ La frustration est la première sensation qui nous traverse ; puis nous
+ relativisons.
+ Sachons prendre autre chose que les joyaux.
+ Un minuscule désert d'herbe et de pierres, le plateau de Suech, donnerait
+ envie au plus anxieux des hommes de s'apaiser.
+ Des roches millénaires, où ruisselle de l'eau tout aussi vieille, bordent
+ nos chemins de méditation.
+ Puis -- le jeudi
+\begin_inset space ~
+\end_inset
+
+22 -- une oasis nous accueille, reposante et relaxante : Saint\SpecialChar \nobreakdash-
+Jean du Désert.
+\end_layout
+
+\begin_layout Standard
+Le temps s'arrête.
+\end_layout
+
+\begin_layout Standard
+Mais la course folle des aiguilles, elle, continue.
+ Nous reprenons la marche une matinée, une seule.
+ Nous n'irons pas plus loin, à pieds, que la ville d'Entreveaux.
+ Le chemin que nous voulions emprunter jusqu'à Nice n'étant pas adapté à
+ notre marche.
+\end_layout
+
+\begin_layout Standard
+Mais le voyage va au-delà des kilomètres ; il est aussi et surtout dans
+ nos têtes.
+\end_layout
+
+\begin_layout Section*
 Vagabondages hygiéniques
 \end_layout
 
